<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.f3838284.kwanda.MainActivity">

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_instruction1"
            android:layout_weight="1"
            android:width="0dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/title2"
            android:layout_below="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_instruction2"
            android:layout_weight="1"
            android:width="0dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center" />
        <TableLayout
            android:id="@+id/display_table"
            android:layout_below="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TableRow
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/FDLMP"/>
                <TextView
                    android:id="@+id/fdlmp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/delivery"/>
                <TextView
                    android:id="@+id/delivery"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            </TableRow>



        </TableLayout>

        <TableLayout
            android:id="@+id/display_table2"
            android:layout_below="@+id/display_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TableRow
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/duration"/>
                <TextView
                    android:id="@+id/duration"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:id="@+id/units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/duration_units"/>
            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_below="@+id/display_table2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">
            <ImageView
            android:id="@+id/outer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/two"
            android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/one"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/display_table2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/today" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:max="365"
                android:layout_centerInParent="true"
                android:progressDrawable="@drawable/circular" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            >



            <Button
                android:id="@+id/button_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Details"
                android:layout_alignParentRight="true"


                />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
